# INFRA

./: .env.example  .gitignore  AUDIT_REPORT.md  DEVELOPMENT_PHASE_2.md  DEVELOPMENT_PHASE_3.md  DEVELOPMENT_PHASE_3_5.md  README.md  Specification.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/api/: admin.py  routes.py
backend/core/: auth.py  config.py  database.py
backend/llm/: provider_factory.py
backend/models/: schemas.py
backend/scrapers/: reddit_scraper.py  rss_scraper.py  telegram_scraper.py
backend/services/: career_service.py  llm_service.py  scheduler.py  sentinel.py
backend/tests/: test_app.py  test_phase2.py  test_phase3.py  test_phase3_5.py  test_phase4_security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdminDashboard.tsx  FilterBar.tsx  JobsPanel.tsx  NewsCard.tsx  NewsFeed.tsx  ProfileSection.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx
frontend/src/hooks/: useApi.ts  useTelegram.ts
frontend/src/store/: appStore.ts
scripts/: generate_session.py
