[project]
name = "infra-backend"
version = "0.1.0"
description = "INFRA — AI-powered intelligence terminal backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "litellm>=1.56.0",
    "httpx>=0.28.0",
    "telethon>=1.36.0",
    "asyncpraw>=7.7.0",
    "feedparser>=6.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10.0,<4.0.0",
    "alembic>=1.14.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
